[package]
name = "csp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type=["staticlib"]

[dependencies]
num_enum = { version = "0.7.1", default-features = false }